.travis.yml: Check ARM filesize, too
It's important to keep arm.bin under 4KiB on both toolchains, so let's
at least print its size.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,7 @@ install:
   - .travis/install.sh
 script:
   - make
+  - ls -l arm/arm.bin
+  - readelf -l arm/arm.elf
   - ls -lh linux.elf
   - readelf -l linux.elf
